--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -331,7 +331,7 @@ isbn = {978-3-642-55015-7},
 doi = {10.1007/978-3-642-55016-4_12}
 }
 
-@software{pandas,
+@misc{pandas,
     author       = {The pandas development team},
     title        = {pandas-dev/pandas: Pandas},
     year         = {2020},
@@ -340,7 +340,7 @@ doi = {10.1007/978-3-642-55016-4_12}
     doi          = {10.5281/zenodo.3509134},
 }
 
-@software{seaborn,
+@misc{seaborn,
     author       = {Michael Waskom and the seaborn development team},
     title        = {mwaskom/seaborn},
     year         = {2020},
@@ -796,7 +796,7 @@ author={
   year={2015},
 }
 
-@software{tensorflowsoft,
+@misc{tensorflowsoft,
   author       = {TensorFlow Developers},
   title        = {TensorFlow},
   month        = aug,
@@ -810,4 +810,15 @@ author={
   version      = {v2.6.0-rc2},
   doi          = {10.5281/zenodo.5159865},
   url          = {https://doi.org/10.5281/zenodo.5159865}
+}
+
+@article{randomgrid,
+  author  = {James Bergstra and Yoshua Bengio},
+  title   = {Random Search for Hyper-Parameter Optimization},
+  journal = {Journal of Machine Learning Research},
+  year    = {2012},
+  volume  = {13},
+  number  = {10},
+  pages   = {281-305},
+  url     = {http://jmlr.org/papers/v13/bergstra12a.html}
 }
