--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -113,6 +113,16 @@ address = {USA},
 edition = {1st},
 }
 
+@book{discretebook,
+  author = {Oppenheim, Alan V. and Schafer, Ronald W. and Buck, John R.},
+  edition = {2nd},
+  keywords = {dft dsp hilbert oppenheim signal.processing textbook},
+  publisher = {Prentice-hall Englewood Cliffs},
+  title = {Discrete-Time Signal Processing},
+  year = {1999},
+}
+
+
 @incollection{timbretransients1,
   author    = {Stephen McAdams},
   title     = {The Perceptual Representation of Timbre},
@@ -821,4 +831,15 @@ author={
   number  = {10},
   pages   = {281-305},
   url     = {http://jmlr.org/papers/v13/bergstra12a.html}
+}
+
+@book{moore,
+title = "An Introduction to the Psychology of Hearing",
+author = "Brian C. J. Moore",
+year = "2013",
+language = "English",
+publisher = "Emerald Group Publishing Limited",
+address = "United Kingdom",
+edition = "6",
+pages = {203--242},
 }
