--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -290,7 +290,8 @@ doi = {10.1109/TSA.2005.858005}
   pages = {1667},
   author = {Fabian-Robert Stöter and Stefan Uhlich and Antoine Liutkus and Yuki Mitsufuji},
   title = {Open-Unmix - A Reference Implementation for Music Source Separation},
-  journal = {Journal of Open Source Software}
+  journal = {Journal of Open Source Software},
+  url = {https://hal.inria.fr/hal-02293689/document}
 }
 
 @inbook{masking,
@@ -755,7 +756,8 @@ doi={10.1109/ICASSP.2004.1326794}
       year={2021},
       eprint={2010.04228},
       archivePrefix={arXiv},
-      primaryClass={eess.AS}
+      primaryClass={eess.AS},
+      url={https://www.ismir2020.net/assets/img/virtual-booth-sonycsl/cUMX_paper.pdf}
 }
 
 @misc{tensorflow,
